# nbody

./: Cargo.toml  galaxy1.txt  shell.nix
resources/: galaxy10k.txt  galaxy30k.txt  galaxymerge.txt
src/: consts.rs  main.rs  quadtree.rs  util.rs
src/quadtree/: body.rs  bound.rs  mod.rs  point.rs  rectangle.rs  vec_2d.rs
src/simulation/: mod.rs  renderizable_body.rs
