[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.12"
rand = "0.8.5"
ultraviolet = { version = "0.6", features = [ "f64", "int" ] }
